<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ExerciseResultActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:allowUndo="false"
        android:background="@android:color/darker_gray"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/overview_header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/overview_left"
            android:padding="5dp"
            android:text="@string/time_taken"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/durationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/overview_right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/overview_left"
            android:padding="5dp"
            android:text="@string/total_distance"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/overview_right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/avg_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/overview_left"
            android:padding="5dp"
            android:text="@string/avg_speed"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/avgSpeedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/overview_right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/min_alt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/overview_left"
            android:padding="5dp"
            android:text="@string/min_altitude"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/minAltText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/overview_right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/max_alt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/overview_left"
            android:padding="5dp"
            android:text="@string/max_altitude"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/maxAltText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/overview_right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/speed_graph"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <com.example.exercise_tracker.ReportGraph
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

</androidx.appcompat.widget.LinearLayoutCompat>